--- a/index.html
+++ b/index.html
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destinations Page</title>
-</head>
-<body>
-    <header>
-        <h1>Vacation Destination Wishlist</h1>
-        <p>Found exciting places to visition on your next vacation? Use the form below to add them to your wishlist</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Destination Wishlist Page</title>
+    <!-- boot strap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <!-- my styles -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="container">
+      <h1>Vacation Destination Wishlist</h1>
+      <p>
+        Found excting places to visit on your next vaction? add the form below
+        to add them to your Wishlist
+      </p>
     </header>
-    <section>
-        <article>
-            <form action="">
-                <label for="destination_name">Destination Name</label>
-                <input type="text" placeholder="Enter Destination Name" id="destination_name">
-                <label for="location_name">Location</label>
-                <input type="text" placeholder="Enter Location Name" id="location_name">
-                <label for="photo_url">Enter Photo URL</label>
-                <input type="url" placeholder="Enter Photo Name" id="photo_name">
-                <label for="photo_url">Description</label>
-                <textarea type="text" placeholder="Enter Photo Name" id="description_name">
-            </form>
+    <section class="container">
+      <div class="row">
+        <article class="col-12 col-sm-4">
+          <form id="user_input_form">
+            <label for="destination_name">Destination name</label>
+            <input
+              type="text"
+              placeholder="Enter destination name"
+              id="destination_name"
+            />
+            <label for="location_name">Location</label>
+            <input
+              type="text"
+              placeholder="Enter location name"
+              id="location_name"
+            />
+            <label for="photo_url">Photo</label>
+            <input type="text" placeholder="Enter photo url" id="photo_url" />
+            <label for="description">Description</label>
+            <textarea
+              placeholder="Enter description"
+              id="description"
+              cols="30"
+              rows="10"
+            ></textarea>
+            <input type="sbumit" value="Add to list" />
+          </form>
         </article>
-        <article>
-            <h3>Enter destination details</h3>
-            <div id="cards_container"></div>
+        <article class="col-12 col-sm-8">
+          <h3 id="cards_container_heading">Enter destination details</h3>
+          <div id="cards_container"></div>
         </article>
+      </div>
     </section>
-</body>
+  </body>
 </html>
