Made card,added gap to css, fixed spelling in HTML

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               cols="30"
               rows="10"
             ></textarea>
-            <input type="sbumit" value="Add to list" />
+            <input type="submit" value="Add to list" />
           </form>
         </article>
         <article class="col-12 col-sm-8">
@@ -56,5 +56,6 @@
         </article>
       </div>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
